:bug: pod selector cropped

--- a/src/components/Elements/Selector/classes.module.scss
+++ b/src/components/Elements/Selector/classes.module.scss
@@ -26,7 +26,7 @@
     border: 0;
     user-select: none;
     text-align: left;
-    text-transform: none;
+    -webkit-appearance: none;
     position: relative;
     height: 36px;
   }
@@ -58,6 +58,7 @@
       cursor: pointer;
       text-overflow: ellipsis;
       overflow: hidden;
+      
     }
   }
 
@@ -91,6 +92,7 @@
     border-radius: 6px;
     color: $textColor;
     background: $backgroundColor;
+    
 
     em {
       --r: 45deg;
